--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ markdown: kramdown
 # so be sure to set them if your theme uses them.
 #
 title : EQcorrscan
-tagline: Multi-paralleled matched-filter earthquake detection
+tagline: Earthquake detection and analysis
 author :
   name : Calum Chamberlain
   email : calum.chamberlain@vuw.ac.nz
